--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,18 +4,28 @@
   background-color: #efefef;
   font-family: 'roboto';
 }
+.form-select{
+  background-color:#efefef;
+  width: auto;
+}
 
-.form-control{
+.form-control {
   background-color: #efefef;
 }
 
+h2 {
+  padding-top: 1rem;
+  text-align: center;
+}
+
 .product-container {
-  border: 1px solid #1221e1;
-  padding: 1rem 4.9rem 1rem 4.9rem;
+  padding: 1rem 4.9rem 0 4.9rem;
   margin-top: 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 0.25rem;
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 
   > div {
     margin-top: 0.5rem;
@@ -25,8 +35,7 @@
   }
 
   > div:nth-child(8),
-  > div:last-child
-  {
+  > div:last-child {
     margin-top: 0;
     margin-bottom: 1.6rem;
   }
@@ -50,9 +59,10 @@
     }
   }
 }
- .error {
-   border: 1px solid red !important;
- }
+
+.error {
+  border: 1px solid red;
+}
 
 .fa-xmark.fa-solid.delete-product-icon {
   font-size: 40px;
@@ -61,6 +71,148 @@
   display: none;
 }
 
+.wrapper__form {
+  display: flex;
+  flex-direction: row;
+  padding-top: 3rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.form__select_client_list {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 0.5rem;
+  margin-right: 8rem;
+}
+
+.form__user_and_client_data_container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.user_and_client_data_container__user_container {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.25rem;
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+}
+
+.user_container__user_data, .user_container__client_data {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.user_data__user_inputs {
+  display: flex;
+  margin-top: 0.3rem;
+  flex-direction: column;
+}
+
+.create_invoice_inputs {
+  display: block;
+  text-align: center;
+}
+
+.create_invoice_user_client_inputs_containers {
+  display: flex;
+  margin-top: 0.3rem;
+  flex-direction: column;
+}
+
+.user_and_client_data_container__client_container {
+  border-radius: 0.25rem;
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+  width: 40%;
+}
+
+.wrapper__form__dates_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+}
+
+.form__dates_header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+}
+
+.form__dates_container {
+  width: 90%;
+}
+
+.dates_container__dates_inputs {
+  display: flex;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.25rem;
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+}
+
+.dates_inputs__input_containers {
+  display: flex;
+  margin-top: 0.3rem;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
+.form__products_list {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+
+.products_list__header_button {
+  width: 100%;
+  display: flex;
+  margin-right: 8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  justify-content: flex-end;
+}
+
+.header_select__header_container {
+  width: 45%;
+  display: flex;
+  justify-content: flex-end;
+  margin-left: 15rem;
+}
+
+.header_button__button_container {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#add-product-button {
+  height: 60%;
+  align-self:center;
+}
+
+.form__submit_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 1.5rem;
+  >button{
+    padding:0.5rem 5rem;
+  }
+}
 
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
