--- a/templates/Clients/create.html.twig
+++ b/templates/Clients/create.html.twig
@@ -2,74 +2,63 @@
 
 {% block body %}
 
-        <div class="vh-100">
-            <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-                <div class="container h-100">
-                    <div class="row d-flex justify-content-center align-items-center h-100">
-                        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                            <div class="card" style="border-radius: 15px;">
-                                <div class="card-body p-5">
-                                    <h2 class="text-uppercase text-center mb-5">Create a Client</h2>
 
-                                    {{ form_start(clients_form, {'method': 'POST'}) }}
-                                    <div class="form-outline mb-4">
-                                        {{ form_widget(clients_form.NIP, {'id': 'NIP','attr': {'class': 'form-control form-control-lg'}}) }}
-                                        {{ form_label(clients_form.NIP,null, {'label': ' Client Nip', 'label_attr': {'class': 'form-label'}}) }}
-                                        {%  if errors.nip is defined %}
-                                            <div style="color: red">{{  errors.nip }}</div>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="form-outline mb-4">
-                                        {{ form_widget(clients_form.COMPANY_NAME, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
-                                        {{ form_label(clients_form.COMPANY_NAME,null, {'label': 'Company Name', 'label_attr': {'class': 'form-label'}}) }}
-                                        {%  if errors.companyName is defined %}
-                                        <div style="color: red">{{  errors.companyName }}</div>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="form-outline mb-4">
-                                        {{ form_widget(clients_form.STREET, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
-                                        {{ form_label(clients_form.STREET,null, {'label': 'STREET', 'label_attr': {'class': 'form-label'}}) }}
-                                        {%  if errors.street is defined %}
-                                            <div style="color: red">{{  errors.street }}</div>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="form-outline mb-4">
-                                        {{ form_widget(clients_form.ZIP_CODE, {'id': 'ZIP','attr': {'class': 'form-control form-control-lg'}}) }}
-                                        {{ form_label(clients_form.ZIP_CODE,null, {'label': 'ZIP CODE', 'label_attr': {'class': 'form-label'}}) }}
-                                        {%  if errors.zipCode is defined %}
-                                            <div style="color: red">{{  errors.zipCode }}</div>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="form-outline mb-4">
-                                        {{ form_widget(clients_form.CITY, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
-                                        {{ form_label(clients_form.CITY,null, {'label': 'CITY', 'label_attr': {'class': 'form-label'}}) }}
-                                        {%  if errors.city is defined %}
-                                            <div style="color: red">{{  errors.city }}</div>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="form-outline mb-4">
-                                        {{ form_widget(clients_form.EMAIL, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
-                                        {{ form_label(clients_form.EMAIL,null, {'label': 'EMAIL', 'label_attr': {'class': 'form-label'}}) }}
-                                        {%  if errors.email is defined %}
-                                            <div style="color: red">{{  errors.email }}</div>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="d-flex justify-content-center">
-                                        {{ form_row(clients_form.Submit, {'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body' }}) }}
-                                    </div>
-
-                                    {{ form_end(clients_form) }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="single-form-container">
+        <h2 class="text-uppercase text-center mb-5">Create a Client</h2>
+            {{ form_start(clients_form, {'method': 'POST'}) }}
+            <div class="form-outline mb-4">
+                {{ form_widget(clients_form.NIP, {'id': 'NIP','attr': {'class': 'form-control form-control-lg'}}) }}
+                {{ form_label(clients_form.NIP,null, {'label': ' Client Nip', 'label_attr': {'class': 'form-label'}}) }}
+                {% if errors.nip is defined %}
+                    <div style="color: red">{{ errors.nip }}</div>
+                {% endif %}
             </div>
-        </div>
+
+            <div class="form-outline mb-4">
+                {{ form_widget(clients_form.COMPANY_NAME, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+                {{ form_label(clients_form.COMPANY_NAME,null, {'label': 'Company Name', 'label_attr': {'class': 'form-label'}}) }}
+                {% if errors.companyName is defined %}
+                    <div style="color: red">{{ errors.companyName }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-outline mb-4">
+                {{ form_widget(clients_form.STREET, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+                {{ form_label(clients_form.STREET,null, {'label': 'STREET', 'label_attr': {'class': 'form-label'}}) }}
+                {% if errors.street is defined %}
+                    <div style="color: red">{{ errors.street }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-outline mb-4">
+                {{ form_widget(clients_form.ZIP_CODE, {'id': 'ZIP','attr': {'class': 'form-control form-control-lg'}}) }}
+                {{ form_label(clients_form.ZIP_CODE,null, {'label': 'ZIP CODE', 'label_attr': {'class': 'form-label'}}) }}
+                {% if errors.zipCode is defined %}
+                    <div style="color: red">{{ errors.zipCode }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-outline mb-4">
+                {{ form_widget(clients_form.CITY, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+                {{ form_label(clients_form.CITY,null, {'label': 'CITY', 'label_attr': {'class': 'form-label'}}) }}
+                {% if errors.city is defined %}
+                    <div style="color: red">{{ errors.city }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-outline mb-4">
+                {{ form_widget(clients_form.EMAIL, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+                {{ form_label(clients_form.EMAIL,null, {'label': 'EMAIL', 'label_attr': {'class': 'form-label'}}) }}
+                {% if errors.email is defined %}
+                    <div style="color: red">{{ errors.email }}</div>
+                {% endif %}
+            </div>
+
+            <div class="d-flex justify-content-center">
+                {{ form_row(clients_form.Submit, {'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body' }}) }}
+            </div>
+
+            {{ form_end(clients_form) }}
+    </div>
+
 {% endblock %}
