--- a/templates/Clients/show.html.twig
+++ b/templates/Clients/show.html.twig
@@ -12,9 +12,9 @@
             {{ message }}
         </div>
     {% endfor %}
-    <div class="pt-4 d-flex justify-content-center align-items-center">
+    <div class="pt-4 d-flex justify-content-center align-items-center table-container">
         {% if clientsData is defined%}
-    <table class="table w-50">
+    <table class="table">
         <thead>
         <tr>
             <th scope="col">#</th>
