--- a/templates/Invoice/generate.html.twig
+++ b/templates/Invoice/generate.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
+        {% block javascripts %}
+            {{ encore_entry_script_tags('generateInvoice') }}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
 {% block body %}
 
     <div class="wrapper">
