--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">User</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Logout</a>
+                </li>
             </ul>
         </div>
     </div>
