--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,14 +3,17 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="single-form-container">
+        <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
+        {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.username) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
-    
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        <div class="d-flex justify-content-center">
+        {{ form_row(registrationForm.register, {'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body' }}) }}
+        </div>
+        {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
