--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,32 +3,23 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {%  if error is defined %}
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+    <div class="single-form-container">
+        <h1>Please sign in.</h1>
+        {{ form_start(login_form, {form_enctype: login_form}) }}
+        {{ form_row(login_form.Username) }}
+        {{ form_row(login_form.Password, {
+            label: 'Password'
+        }) }}
+        <div class="d-flex justify-content-center">
+            {{ form_row(login_form.Login, {'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body' }}) }}
         </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-
-    <input type="text"{%  if last_username is defined %} value="{{ last_username }}"{% endif %} name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+        {% if error %}
+            {{  dump(error) }}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
+        {{ form_end(login_form) }}
+    </div>
 {% endblock %}
