--- a/templates/Products/show.html.twig
+++ b/templates/Products/show.html.twig
@@ -20,6 +20,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
                     <th scope="col">Price</th>
+                    <th scope="col">Tax Rate</th>
                     <th scope="col">Edit</th>
                     <th scope="col">Delete</th>
                 </tr>
