js settings WIP

--- a/templates/users/Settings.html.twig
+++ b/templates/users/Settings.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
+        {% block javascripts %}
+            {{ encore_entry_script_tags('settings') }}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
 {% block body %}
 
     <div class="single-form-container">
@@ -13,7 +17,7 @@
         </div>
 
         <div class="form-outline mb-4">
-            {{ form_widget(user_settings_form.NAME, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+            {{ form_widget(user_settings_form.NAME, {'id': 'NAME', 'attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(user_settings_form.NAME,null, {'label': 'Company Name', 'label_attr': {'class': 'form-label'}}) }}
             {% if errors.NAME is defined %}
                 <div style="color: red">{{ errors.name }}</div>
@@ -21,8 +25,8 @@
         </div>
 
         <div class="form-outline mb-4">
-            {{ form_widget(user_settings_form.STREET, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
-            {{ form_label(user_settings_form.STREET,null, {'label': 'STREET', 'label_attr': {'class': 'form-label'}}) }}
+            {{ form_widget(user_settings_form.STREET, {'id': 'STREET', 'attr': {'class': 'form-control form-control-lg'}}) }}
+            {{ form_label(user_settings_form.STREET,null, {'label': 'Street', 'label_attr': {'class': 'form-label'}}) }}
             {% if errors.street is defined %}
                 <div style="color: red">{{ errors.street }}</div>
             {% endif %}
@@ -30,22 +34,22 @@
 
         <div class="form-outline mb-4">
             {{ form_widget(user_settings_form.ZIP_CODE, {'id': 'ZIP','attr': {'class': 'form-control form-control-lg'}}) }}
-            {{ form_label(user_settings_form.ZIP_CODE,null, {'label': 'ZIP CODE', 'label_attr': {'class': 'form-label'}}) }}
+            {{ form_label(user_settings_form.ZIP_CODE,null, {'label': 'Zip Code', 'label_attr': {'class': 'form-label'}}) }}
             {% if errors.zipCode is defined %}
                 <div style="color: red">{{ errors.zipCode }}</div>
             {% endif %}
         </div>
 
         <div class="form-outline mb-4">
-            {{ form_widget(user_settings_form.CITY, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
-            {{ form_label(user_settings_form.CITY,null, {'label': 'CITY', 'label_attr': {'class': 'form-label'}}) }}
+            {{ form_widget(user_settings_form.CITY, {'id': 'CITY', 'attr': {'class': 'form-control form-control-lg'}}) }}
+            {{ form_label(user_settings_form.CITY,null, {'label': 'City', 'label_attr': {'class': 'form-label'}}) }}
             {% if errors.city is defined %}
                 <div style="color: red">{{ errors.city }}</div>
             {% endif %}
         </div>
 
         <div class="form-outline mb-4">
-            {{ form_widget(user_settings_form.EMAIL, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+            {{ form_widget(user_settings_form.EMAIL, {'id': 'EMAIL', 'attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(user_settings_form.EMAIL,null, {'label': 'EMAIL', 'label_attr': {'class': 'form-label'}}) }}
             {% if errors.email is defined %}
                 <div style="color: red">{{ errors.email }}</div>
