--- a/templates/users/Settings.html.twig
+++ b/templates/users/Settings.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
         {% block javascripts %}
-            {{ encore_entry_script_tags('settings') }}
+            {{ encore_entry_script_tags('userAndClientsDataTemplates') }}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
 {% block body %}
